Try to fix number 5 horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,13 @@
 }
 
 html, body {
-  width: 100%;
+margin: 0;
+  padding: 0;
   overflow-x: hidden;
   overscroll-behavior-x: contain;
+  height: 100%;
+
+  touch-action: manipulation;
 }
 
 
@@ -1232,6 +1236,7 @@ margin: 0;
     width: 100%;
     display: flex;
     justify-content: center;
+    
   }
 
   .header__logo {
@@ -1258,7 +1263,7 @@ margin: 0;
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
-    padding: 10px 5%;
+    padding: 5px 5%;
     margin: 0;
     list-style: none;
   }
